<resources>
    <string name="app_name">OracleConnection</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">search</string>
    <string name="hint_id">ID NO.</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_job">position</string>
    <string name="hint_salary">Salary</string>
    <string name="hint_datehire">date hire</string>
    <string name="hint_mgr">Mgr id</string>
    <string name="hint_comm">commision</string>
    <string name="hint_deptno">dept ID</string>
    <string name="title_activity_add_employee">AddEmployee</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_logout">Logout</string>
    <string name="username">Username</string>
</resources>
