<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout

            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">




                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <android.support.design.widget.TextInputLayout
                                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                android:layout_weight="1"
                                android:id="@+id/input_layout_id"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content">
                                <EditText
                                    android:textColor="@color/colorPrimary"
                                    android:enabled="false"
                                    android:id="@+id/input_id"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/hint_id" />
                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                android:layout_weight="2.5"
                                android:id="@+id/input_layout_name"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content">
                                <EditText
                                    android:textColor="@color/colorPrimary"
                                    android:enabled="false"
                                    android:id="@+id/input_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/hint_name" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:id="@+id/input_layout_mgr"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <EditText
                                android:textColor="@color/colorPrimary"
                                android:enabled="false"
                                android:id="@+id/input_mgr"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_mgr" />
                        </android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:layout_weight="2.5"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:id="@+id/input_layout_datehire"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <EditText
                                android:textColor="@color/colorPrimary"
                                android:enabled="false"
                                android:id="@+id/input_datehire"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_datehire" />
                        </android.support.design.widget.TextInputLayout>



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:id="@+id/input_layout_deptno"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <EditText
                                android:textColor="@color/colorPrimary"
                                android:enabled="false"
                                android:id="@+id/input_deptno"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_deptno" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_weight="2.5"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:id="@+id/input_layout_job"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">

                            <AutoCompleteTextView
                                android:hint="@string/hint_job"
                                android:textColor="@color/colorPrimary"
                                android:enabled="false"
                                android:id="@+id/input_job"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>



                        <android.support.design.widget.TextInputLayout
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:id="@+id/input_layout_sal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:textColor="@color/colorPrimary"
                                android:enabled="false"
                                android:id="@+id/input_sal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_salary" />
                        </android.support.design.widget.TextInputLayout>



                        <android.support.design.widget.TextInputLayout
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:id="@+id/input_layout_comm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:textColor="@color/colorPrimary"
                                android:enabled="false"
                                android:id="@+id/input_comm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_comm" />

                        </android.support.design.widget.TextInputLayout>



                     </LinearLayout>
                    <LinearLayout
                        android:layout_alignParentBottom="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">



                        <Button
                            android:textColor="@color/White"
                            android:background="@color/colorPrimary"
                            android:layout_weight="1"
                            android:id="@+id/btnUpdate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="Edit"
                            />

                        <Button
                            android:textColor="@color/White"
                            android:background="@color/colorPrimary"
                            android:layout_weight="1"
                            android:id="@+id/btnDelete"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="Delete"
                            />
                    </LinearLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        android:src="@drawable/ic_stars_white_36dp"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"/>

</android.support.design.widget.CoordinatorLayout>